<resources>
    <string name="app_name">Shukuraliev_Keneshbek_final</string>
    <string name="chinnese_north_indian">Chinnese, North Indian</string>
    <string name="chinnese_north_indian">Chinnese, North Indian</string>
    <string name="_200">200</string>
    <string name="left_over_food_and_supplies_are_gathered_and_sold_for_50_off">Left over food and supplies are gathered and sold for 50% off!</string>
    <string name="_100">$100</string>
    <string name="pista_house">Pista House</string>
    <string name="_200">200</string>
    <string name="left_over_food_and_supplies_are_gathered_and_sold_for_50_off">Left over food and supplies are gathered and sold for 50% off!</string>
    <string name="_145_cal">145 cal</string>
</resources>